--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,14 +5,22 @@ security:
     Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
   # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
   providers:
-    users_in_memory: { memory: null }
+    app_user_provider:
+      entity:
+        class: App\Entity\User
+        property: email
   firewalls:
+    api:
+      pattern: ^/api/
+      stateless: true
+      custom_authenticator: App\Security\ApiKeyAuthenticator
+      provider: app_user_provider
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
     main:
       lazy: true
-      provider: users_in_memory
+      provider: app_user_provider
       form_login:
         # "login" is the name of the route created previously
         login_path: login
@@ -30,7 +38,9 @@ security:
   # Note: Only the *first* access control that matches will be used
   access_control:
     # matches /admin/* except for anything matching the above rule
-    - { path: '^/admin', roles: ROLE_ADMIN }
+      - { path: ^/admin, roles: ROLE_ADMIN }
+      - { path: ^/api/, roles: ROLE_USER }
+      - { path: /add-news, roles: ROLE_ADMIN }
 
 
 when@test:
